[metadata]
name = peerprint
version = attr: peerprint.__version__
author = Scott Martin
author_email = smartin015+peerprint@gmali.com
description = Peer-to-peer networked 3d printing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/smartin015/peerprint
project_urls =
    Bug Tracker = https://github.com/smartin015/peerprint
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
 # peerprint
packages = find:
python_requires = >=3.6
install_requires =
    pulp==2.6.0
    pysyncobj==0.3.10
    pyyaml==6.0
    peewee==3.14.10
    pyzmq==22.3.0
    numpy==1.22.3

[options.packages.find]
#where = src
exclude=*_test

