[metadata]
name = peerprint
version = attr: peerprint.version.__version__
author = Scott Martin
author_email = smartin015+peerprint@gmali.com
description = Peer-to-peer networked 3d printing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/smartin015/peerprint
project_urls =
    Bug Tracker = https://github.com/smartin015/peerprint
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    pysyncobj==0.3.10
    requests>=2.2

[options.extras_require]
DEV= pyzmq>=22.3.0

[options.packages.find]
exclude=*_test
